# movie

./: README.md  \  movie.py  pyproject.toml
src/movie/: cli.py
src/movie/api/: call.py
tests/: test_call.py
