[project]
name = "movie"
version = "0.2.0"
description = "영화진흥위원회 영화 순위 데이터 처리"
authors = [
    {name = "HaramSs", email = "haram8274@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}



[tool.pdm]
distribution = false

[project.scripts]
mov-ping = 'movie.cli:ping'

[project.urls]
Homepage ="https://github.com/HaramSs/movie/"
Issues = "https://github.com/HaramSs/movie.issues"
